Prevent text auto-scaling on mobile

--- a/styles/pages/document.css
+++ b/styles/pages/document.css
@@ -367,10 +367,6 @@
     -ms-overflow-style: -ms-autohiding-scrollbar;
     -webkit-overflow-scrolling: touch;
     white-space: nowrap;
-    -webkit-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    text-size-adjust: 100%;
   }
   #document > article aside {
     float: none;
